assets/css/style.css
html {
	min-height: 100%;
	position: relative;
}

body {
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url(../images/background.svg);
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif;
	font-size: 18px;
	line-height: 150%;
	margin-bottom: calc(100px + 2%);
}

h1 {
	font-size: 1.5em;
	font-weight: bold;
	text-transform: capitalize;
}

h2 {
	font-size: 1.3em;
	font-weight: bold;
	text-transform: capitalize;
}

.bar {
	padding-left: 10%;
	padding-right: 10%;
	width: 80%;
	background: rgba(0, 0, 0, 0.8);
	background: -webkit-linear-gradient(-10deg, rgba(0, 0, 0, 0.8), rgba(60, 60, 60, 0.8), rgba(0, 0, 0, 0.8));
	background: -o-linear-gradient(-10deg, rgba(0, 0, 0, 0.8), rgba(60, 60, 60, 0.8), rgba(0, 0, 0, 0.8));
	background: -moz-linear-gradient(-10deg, rgba(0, 0, 0, 0.8), rgba(60, 60, 60, 0.8), rgba(0, 0, 0, 0.8));
	background: linear-gradient(-10deg, rgba(0, 0, 0, 0.8), rgba(60, 60, 60, 0.8), rgba(0, 0, 0, 0.8));
	position: fixed;
	border-bottom: 3px solid #333333;
	top: 0;
	display: flex;
	justify-content: space-between;
	overflow: auto;
	z-index: 3;
}

.name {
	background: rgba(146, 0, 0, 0.8);
	background: -webkit-linear-gradient(90deg, #920000 50%, #003c92 50%);
	background: -o-linear-gradient(90deg, #920000 50%, #003c92 50%);
	background: -moz-linear-gradient(90deg, #920000 50%, #003c92 50%);
	background: linear-gradient(90deg, #920000 50%, #003c92 50%);
	text-align: center;
	padding: 8px 12px;
}

.name h1{
	background: rgba(0, 60, 146, 0.8);
	background: -webkit-linear-gradient(90deg, #003c92 50%, #920000 50%);
	background: -o-linear-gradient(90deg, #003c92 50%, #920000 50%);
	background: -moz-linear-gradient(90deg, #003c92 50%, #920000 50%);
	background: linear-gradient(90deg, #003c92 50%, #920000 50%);
	color: transparent;
	-webkit-background-clip: text;
	background-clip: text;
	padding: 8px 12px;
}

ul.menu {
	font-size: 16px;
}

ul.menu a:link {
	color: #999;
	text-decoration: none;
}

ul.menu a:hover {
	color: #0f410f;

}

ul.menu a:visited {
	color: #888888;
	text-decoration: none;
}

ul.menu a:active {
	color: #002909;
}

ul.menu li{
	float: left;
	padding: 16px 18px;
	text-transform: uppercase;
	overflow: auto;
}

ul.menu li:hover {
		background-color: rgba(244, 244, 244, 0.8);
}

ul.menu li:hover a{
	text-decoration: underline;
	color: #0f410f;
}

.layout {
	margin: calc(56px + 2%) 10% 2% 10%;
	display: flex;
	align-items: flex-start;
	justify-content: space-between;
	position: relative;
}

.container, .connect {
	background-color: rgba(224, 224, 224, 0.8);	
}

.container {
	width: 68%;
	margin-right: 2%;
}

.containerInner {
	margin: 32px;
	display: flex;
	flex-flow: column wrap;
}

.title {
	color: #007900;
	padding-bottom: 20px;
}

.aboutContent {
	float: left;
	overflow: auto;
}

.aboutImage {
	max-width: 30%;
	height: auto;
	float: left;
	overflow: auto;
	margin-right: 20px;
}

.portfolioContent {
	width: 100%;
	float: left;
	overflow: auto;
}

.portfolioItems {
	max-width: 47%;
	height: auto;
	float: left;
	overflow: auto;

}

.portfolioItems img{
	max-width: 100%;
	height: auto;
	position: relative;
	z-index: 1;
}


.portfolioItems span {
	background-color: rgba(0, 121, 0, 0.8);
	width: 100%;
	color: #aaa;
	left: 0;
	max-width: 600px;
	height: auto;
	margin-top: -25%;
	padding: 3% 0 3% 0;
	text-align: center;
	position: relative;
	float: left;
	z-index: 2;
}

div.portfolioItems {
	margin-bottom: 5%;
}

div.portfolioItems:nth-child(odd){
	margin-right: 3%;
}

div.portfolioItems:nth-child(even){
	margin-left: 3%;
}

.contactForm fieldset {
	border: medium none;
	margin: 0 0 10px;
	min-width: 100%;
	padding: 0;
}

.contactForm input[type="text"],
.contactForm input[type="email"],
.contactForm textarea {
	width: 94%;
	font-size: 18px;
	border: 1px solid rgb(50, 130, 50);
	background: #FFF;
	margin-right: 3%;
	padding: 10px;
}

.contactForm button[type="submit"] {
	cursor: pointer;
	color: #ccc;
	font-size: 18px;
	background-color: rgb(50, 130, 50);
	min-width: 30%;
	height: auto;
	margin-right: 35%;
	margin-left: 35%;
	border: 1px solid #111;
	padding: 10px;
}

.contactForm textarea {
	resize: none;
	height: 300px;
}

.connect {
	width: 28%;
	margin-left: 2%;
}

.connectInner {
	margin: 32px;
}

a.logo {
	max-width: 30%;
	height: auto;
}

a.logo img {
	max-width: 90%;
	height: 90%;
	padding: 5%;
}

a:hover.logo {
	background-color: rgba(244, 244, 244, 0.5);
}

.social {
	display: flex;
	align-items: center;
	justify-content: space-between;
	overflow: auto;
}

footer {
	width: 100%;
	height: 80px;
	color: #999;
	font-size: 16px;
	text-transform: capitalize;
	text-align: center;
 	background-color: rgba(0, 0, 0, 0.8);
 	padding-top: 20px;
 	border-top: 3px solid #999;
 	position: absolute;
 	bottom: 0;

}

/*Media queries begin*/

/*Media query for screen width between 769px to 980px*/

@media only handheld, screen and (min-width: 769px) and (max-width: 980px) {
	
	.aboutImage {
		min-width: 100%;
		margin: 0 0 20px 0;
	}

	div.portfolioItems:nth-child(n) {
		margin: 0;
		max-width: 100%;
	}

	.container {
		width: 68%;
		margin-right: 2%;
	}

	.connect {
		width: 38%;
		margin-left: 2%;
	}
}

/*Media query for screen width between 641px to 768px*/

@media handheld, screen and (min-width: 641px) and (max-width: 768px) {
	
	.bar {
		padding-left: 2%;
		padding-right: 2%;
		width: 96%;
	}

	.layout {
		margin: calc(56px + 2%) 2% 2% 2%;	
		flex-direction: column;
	}

	.container {
		width: 100%;
		margin-right: 0;
		margin-bottom: 1vw;
	}

	.aboutImage {
		max-width: 50%;
	}

	.connect {
		width: 100%;
		margin-left: 0;
		margin-top: 1vw;
	}

	a.logo {
		max-width: 20%;
	}
}

/*Media query for 640px and below*/

@media handheld, screen and (max-width: 640px) {

	.bar {
		flex-direction: column;
		padding: 0;
		width: 100%;
		position: static;
	}

	ul.menu li {
		width: calc(33vw - 36px);
		text-align: center;
	}

	.layout {
		margin: 2% 2% 2% 2%;
		flex-direction: column;
	}

	.container {
		width: 100%;
		margin-right: 0;
		margin-bottom: 1vw;
	}

	.aboutImage {
		max-width: 50%;
	}

	div.portfolioItems:nth-child(n) {
		margin: 0;
		max-width: 100%;
	}

	.connect {
		width: 100%;
		margin-left: 0;
		margin-top: 1vw;
	}

	a.logo {
		max-width: 20%;
	}
}

